@@ -30,7 +30,7 @@
                 {trans("Ticket type:")}
                 <input type="hidden" name="tt" value="all">
                 <SELECT size="1" name="tt[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect lms-ui-multiselect-filter" data-default-value="{trans("- all -")}">
-                {foreach $_RT_TYPES as $key => $tt}
+                {foreach Localisation::arraySort($_RT_TYPES, 'label') as $key => $tt}
                     <OPTION value="{$key}"{if is_array($filter.typeids) && in_array($key, $filter.typeids)} SELECTED{/if}>{$tt.label}</OPTION>
                 {/foreach}
                 </SELECT>
