@@ -70,7 +70,7 @@
 									<i class="lms-ui-icon-content lms-ui-icon-type"></i>{trans("Ticket type:")}
 								</TD>
 								<TD style="width: 99%;" class="nobr">
-                                    {$_RT_TYPES[$ticket.type].label}
+                                    {trans($_RT_TYPES[$ticket.type].label)}
 								</TD>
 							</TR>
 							{/if}
