@@ -226,6 +226,7 @@ version 26-git (????-??-??):
     if from date is later than days count in ther future (default '0' values menas that feature
     is disabled) [chilan]
   - improvement/devel: migrated from tinymce 4 to 5 [chilan]
+  - improvement: helpdesk ticket type list is sorted according to current localisation [chilan]
 
 version 25.0 (2020-05-15):
 
